--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "nodemon": "^2.0.6",
+    "redis": "^3.0.2",
     "serve-favicon": "^2.5.0"
   }
 }
