--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "nodemon": "^2.0.6",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "redis": "^3.0.2",
+    "sequelize": "^6.3.5",
     "serve-favicon": "^2.5.0"
   }
 }
