--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "redis": "^3.0.2",
+    "request-ip": "^2.1.3",
     "sequelize": "^6.3.5",
     "serve-favicon": "^2.5.0"
   }
