latest version incl. login

--- a/package.json
+++ b/package.json
@@ -30,7 +30,14 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "helmet": "^4.3.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
+    "passport-instagram": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "redis": "^3.0.2",
